feat (BE): add CRUD user
